# rust-jieba

./: Cargo.toml  Dockerfile  log4rs.yml
.github/workflows/: ci.yml
src/: main.rs  response.rs  result.rs  route.rs
src/api/v1/: mod.rs  participle.rs
src/config/: actix.rs  config.rs  jieba.rs  logger.rs  mod.rs
src/controller/: health.rs
src/middleware/: mod.rs  request_logger_middleware.rs
src/model/: mod.rs  participle.rs
