[package]
name = "rust-jieba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "~0.4.1" }
log4rs = { version = "~1.0.0" }
serde = { version = "~1.0.130", features = ["derive"] }
serde_json = { version = "~1.0.71" }
lazy_static = { version = "~1.4.0" }
actix-web = { version = "~3.3.0" }
jieba-rs = { version = "~0.6.6" }
dotenv = { version = "~0.15.0" }
uuid = { version = "0.8", features = ["serde", "v5"] }